--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             flex-direction: row;
         }
         
-        #inter{
+        .inter{
             font-weight: bold; 
             color: red;
         }
@@ -120,7 +120,7 @@
             const res = document.createElement('p')
             resContent.setAttribute('id', 'resposta')
             res.setAttribute('id', 'resposta')
-            interesse.setAttribute('id', 'inter')
+            interesse.setAttribute('class', 'inter')
             res.textContent = 'Ah entendi, interessante !'
             resContent.textContent = "Assim que possível entrarei em contato com mais informações sobre " + interesse
             
